examples/test/testpolicy9613.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9613
  namespace: namespace215
spec:
  podSelector:
    matchLabels:
      key30: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value20
          key13: value5
          key15: value35
      podSelector:
        matchLabels:
          key43: value1
